--- a/ci/workflows/docker.yml
+++ b/ci/workflows/docker.yml
@@ -101,4 +101,4 @@ steps:
     if: build.env("ENABLE_DOCKER_SCOUT") == "true"
     depends_on:
       - "docker-scout"
-    command: ci/scripts/docker-scout-notify.sh
+    command: ci/scripts/docker-scout-notify.shx
