--- a/integration_tests/iceberg-sink2/docker/hive/docker-compose.yml
+++ b/integration_tests/iceberg-sink2/docker/hive/docker-compose.yml
@@ -30,8 +30,8 @@ services:
       iceberg_net:
     links:
       - minio-0:icebergdata.minio-0
-    expose:
-      - 15002
+    ports:
+      - "15002:15002"
     healthcheck:
       test: netstat -ltn | grep -c 15002
       interval: 1s
